fix(style): prevent overflow

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -24,6 +24,7 @@ a:hover {
 
 .bound-width {
   max-width: 960px !important;
+  width: 100%;
 }
 
 article {
